# MPiSC

./: .gitignore  .gitmodules  README.md  flake.nix
implementations/: 1  CMakeLists.txt  README.md  comm.hpp  flake.nix  hosts  main.cpp  out.txt
implementations/active-message-queue/: active-message-queue.hpp
implementations/bcl/: README.md  ccqueue.hpp  circular-queue.hpp  fastqueue.hpp
implementations/benches/: utils.h
implementations/examples/: batch_fastqueue.cpp  batch_fastqueue_overrun.cpp  batch_ltqueue.cpp  batch_ltqueue_overrun.cpp  batch_slotqueue.cpp  batch_slotqueue_overrun.cpp  max_stutter_counter.cpp  single_amqueue.cpp  single_ccqueue.cpp  single_composite-2-3-slotqueue.cpp  single_fastqueue.cpp  single_jiffy.cpp  single_ltqueue.cpp  single_naive_unbounded_ltqueue.cpp  single_partial_jiffy.cpp  single_slotqueue.cpp  single_slotqueue_NUMA.cpp  single_slotqueue_hosted.cpp  single_slotqueue_node.cpp  single_slotqueue_v2.cpp  single_slotqueue_v2a.cpp  single_slotqueue_v2b.cpp  single_slotqueue_v2bc.cpp  single_slotqueue_v2c.cpp  single_unbounded_ltqueue.cpp  single_unbounded_slotqueue.cpp
implementations/jiffy/: README.md  hp.hpp  jiffy.hpp  naive-jiffy.hpp  utils.hpp
implementations/lamport/: README.md
implementations/lib/: comm.hpp  sleep.hpp  spsc.hpp
implementations/ltqueue/: README.md  ltqueue-node.hpp  ltqueue-unbounded.hpp  ltqueue.hpp  naive-ltqueue-unbounded.hpp
implementations/slot-queue/: README.md  slot-queue-NUMA.hpp  slot-queue-v2.hpp  slot-queue-v2a.hpp  slot-queue-v2b.hpp  slot-queue-v2bc.hpp  slot-queue-v2c.hpp  slot-queue.hpp
implementations/slotqueue/: README.md  (+6 more)
(+91 files in other folders)
